--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     for (let i = 88; i <= 114; i++) estandes.push({ id: `E${i}`, cor: '#dda0dd' });
     for (let i = 115; i <= 139; i++) estandes.push({ id: `F${i}`, cor: '#f08080' });
     for (let i = 140; i <= 164; i++) estandes.push({ id: `G${i}`, cor: '#87ceeb' });
-    for (let i = 165; i <= 191; i++) estandes.push({ id: `H${i}`, cor: '#037094' });
+    for (let i = 165; i <= 191; i++) estandes.push({ id: `H${i}`, cor: '#F55F38' });
 
     async function carregarReservas() {
       const snapshot = await db.collection("reservas").get();
