--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
   <script>
     // 🔹 CONFIGURAÇÃO DO FIREBASE (substituir pelos seus dados)
     const firebaseConfig = {
-      apiKey: "AIzaSyBHoD18a3KLk9Fwla_EW9eO0-8gi9ODN04",
-      authDomain: "reservaexpoco-senadorcanedo.firebaseapp.com",
-      projectId: "reservaexpoco-senadorcanedo",
-      storageBucket: "reservaexpoco-senadorcanedo.firebasestorage.app",
-      messagingSenderId: "1005969732734",
-      appId: "1:1005969732734:web:03bd3ef7b6ef46f310542f"
+      apiKey: "AIzaSyAjae83IWYk8OWkgdId6Y5oNS6FbJ9-aFE",
+      authDomain: "reservaexpoco-goiania.firebaseapp.com",
+      projectId: "reservaexpoco-goiania",
+      storageBucket: "reservaexpoco-goiania.firebasestorage.app",
+      messagingSenderId: "540494014283",
+      appId: "1:540494014283:web:f253fcefe25c0bfc796ace"
     };
 
     firebase.initializeApp(firebaseConfig);
