--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       apiKey: "AIzaSyAjae83IWYk8OWkgdId6Y5oNS6FbJ9-aFE",
       authDomain: "reservaexpoco-goiania.firebaseapp.com",
       projectId: "reservaexpoco-goiania",
-      storageBucket: "reservaexpoco-goiania.firebasestorage.app",
+      storageBucket: "reservaexpoco-goiania.appspot.com",
       messagingSenderId: "540494014283",
       appId: "1:540494014283:web:f253fcefe25c0bfc796ace"
     };
